Fix Alignment

--- a/css/style.css
+++ b/css/style.css
@@ -140,6 +140,7 @@ button {
 .firstLoad {
     display: flex;
     justify-content: center;
+    text-align: center;
 }
 
 article {
@@ -179,6 +180,7 @@ footer {
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
 }
 
 footer>*>* {
